--- a/index.html
+++ b/index.html
@@ -276,4 +276,95 @@
                 <span class="text-[9px] font-bold py-1 px-3 rounded-full bg-cyan-500/5 border border-cyan-500/10 text-cyan-400/80 uppercase">Activities</span>
               </div>
 
-              <h4 class="text-2xl font-black
+              <h4 class="text-2xl font-black mb-3"> نادي الهندسة الكهربائية</h4>
+              <p class="text-xs md:text-sm text-white/50 leading-relaxed mb-8">
+                انضم لفريق التنظيم، الإعلام، والعلاقات العامة للمساهمة في أنشطة وفعاليات النادي المختلفة.
+              </p>
+            </div>
+
+            <a href="https://forms.gle/A8hirHTVXpXzA2Rz9" class="relative z-10 w-full py-4 rounded-2xl bg-cyan-600/10 hover:bg-cyan-600 text-cyan-400 hover:text-white text-sm font-black transition-all duration-300 border border-cyan-500/20 flex items-center justify-center gap-3 group/btn">
+              كن عضواً في النادي
+              <i class="fa-solid fa-arrow-left text-[10px] group-hover/btn:-translate-x-1 transition-transform"></i>
+            </a>
+
+            <div class="absolute -bottom-12 -left-12 w-32 h-32 bg-cyan-500/10 blur-[60px] rounded-full group-hover:bg-cyan-500/20 transition-all duration-700"></div>
+          </div>
+        </div>
+      </section>
+
+    </div>
+  </main>
+
+  <!-- Upload Modal -->
+  <div id="uploadModal" class="fixed inset-0 z-[100] hidden items-center justify-center p-4 bg-black/80 backdrop-blur-md">
+    <div class="glass w-full max-w-lg rounded-[2.5rem] p-8 relative shadow-2xl">
+      <button id="closeUploadBtn" class="absolute top-6 left-6 text-white/40 hover:text-white transition" aria-label="إغلاق">
+        <i class="fa-solid fa-xmark text-xl"></i>
+      </button>
+
+      <div id="formContent">
+        <div class="text-right mb-8">
+          <h3 class="text-2xl font-black text-white">مشاركة مصدر أكاديمي</h3>
+          <p class="text-[10px] text-indigo-400 font-bold uppercase tracking-widest mt-1">Submit Your Resources</p>
+        </div>
+
+        <form enctype="multipart/form-data" id="eeSourceForm" class="space-y-4 text-right">
+          <input type="text" name="subject" required class="w-full bg-white/5 border border-white/10 rounded-xl px-4 py-3 text-sm focus:border-indigo-500 outline-none" placeholder="اسم المادة">
+          <input type="text" name="note" class="w-full bg-white/5 border border-white/10 rounded-xl px-4 py-3 text-sm focus:border-indigo-500 outline-none" placeholder="رابط خارجي أو ملاحظة">
+          <div class="border border-dashed border-white/10 rounded-xl p-4 text-center">
+            <input type="file" name="file" class="text-xs text-white/40 w-full cursor-pointer" accept="application/pdf">
+          </div>
+          <button type="submit" class="btn-brand w-full py-4 rounded-xl font-black text-sm" id="submitBtn">
+            إرسال للمراجعة
+          </button>
+          <p class="text-[10px] text-white/30 text-center">حالياً للتجربة: رفع PDF فقط</p>
+        </form>
+      </div>
+
+      <div id="successUi" class="hidden text-center py-10 animate-scale">
+        <i class="fa-solid fa-circle-check text-5xl text-green-500 mb-4"></i>
+        <h3 class="text-xl font-black">تم الاستلام بنجاح!</h3>
+        <p class="text-sm text-white/40 mt-3 px-10">شكراً لمساهمتك القيمة يا مهندس.</p>
+        <button id="closeSuccessBtn" class="mt-8 text-indigo-400 underline text-xs">إغلاق</button>
+      </div>
+    </div>
+  </div>
+
+  <footer class="mt-6 py-8 border-t border-white/5 bg-black/20 backdrop-blur-sm">
+    <div class="max-w-5xl mx-auto px-6 flex flex-col items-center">
+      <div class="flex items-center gap-3 py-3 group">
+        <div class="relative flex items-center justify-center">
+          <i class="fa-solid fa-bolt text-[10px] text-indigo-500/40 group-hover:text-indigo-400 transition-colors duration-500"></i>
+          <div class="absolute w-4 h-4 bg-indigo-500/5 rounded-full animate-ping"></div>
+        </div>
+
+        <a href="about.html" class="flex flex-col border-r border-white/5 pr-3 transition-all duration-500 group-hover:border-indigo-500/30">
+          <span class="text-[13px] font-black tracking-wide text-white/40 group-hover:text-white/90 transition-all duration-500" style="font-family: 'Cairo', sans-serif;">
+            الرصاصي
+          </span>
+          <span class="text-[8px] font-medium uppercase tracking-[0.3em] text-white/10 group-hover:text-indigo-400/50 transition-all duration-500" style="font-family: 'Inter', sans-serif; margin-top: -2px;">
+            Designer
+          </span>
+        </a>
+      </div>
+
+      <p class="text-[10px] font-medium text-white/20 uppercase tracking-[0.35em] text-center leading-relaxed mt-2">
+        Designed & Developed by <br class="sm:hidden">
+        <span class="text-indigo-400/80 hover:text-indigo-400 transition-colors cursor-pointer">Alrasasi</span>
+        &copy; 2026
+      </p>
+
+      <div class="disclaimer">
+        <p>
+          هذا الموقع مبادرة طلابية مساعدة، وليس جهة رسمية ولا يُعد بديلًا عن أنظمة الكلية.
+          لا يتم حفظ أي بيانات شخصية، وجميع المعلومات المعروضة مأخوذة من مصادر متاحة ورسمية.
+          في حال وجود أي ملاحظة أو تصحيح، نرحب بالتواصل.
+        </p>
+      </div>
+    </div>
+  </footer>
+
+  <!-- JS الخارجي -->
+  <script src="assets/js/app.js"></script>
+</body>
+</html>
