--- a/admin.html
+++ b/admin.html
@@ -12,62 +12,78 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700;900&display=swap" rel="stylesheet">
 
-  <style>
-    body{ font-family:'Cairo', sans-serif; background:#0b1026; color:#fff; }
-    .glass{ background: rgba(15,23,42,.72); backdrop-filter: blur(10px); border: 1px solid rgba(255,255,255,.08); }
-  </style>
+  <link rel="stylesheet" href="assets/css/main.css">
 </head>
 
 <body class="min-h-screen">
-  <div class="max-w-4xl mx-auto p-6">
+  <main class="max-w-5xl mx-auto px-4 sm:px-6 py-10">
 
-    <div class="glass rounded-3xl p-6 mb-6">
-      <h1 class="text-2xl font-black">لوحة الإدارة</h1>
-      <p class="text-sm text-white/60 mt-1">إدارة الملفات المرفوعة (Pending / Approved)</p>
+    <!-- Header -->
+    <div class="glass rounded-[2rem] p-6 sm:p-8 mb-6 flex items-center justify-between">
+      <div class="text-right">
+        <h1 class="text-2xl font-black">لوحة الإدارة</h1>
+        <p class="text-xs text-white/50 mt-1">إدارة الملفات المرفوعة (Pending/Approved)</p>
+      </div>
+      <div class="flex gap-2">
+        <button id="refreshBtn" class="btn-ghost px-4 py-2 rounded-xl text-sm font-bold">تحديث</button>
+        <button id="logoutBtn" class="btn-ghost px-4 py-2 rounded-xl text-sm font-bold hidden">تسجيل خروج</button>
+      </div>
     </div>
 
-    <!-- Login Box -->
-    <div id="loginBox" class="glass rounded-3xl p-6">
-      <h2 class="text-lg font-black mb-4">تسجيل دخول المدير</h2>
+    <!-- Login Card -->
+    <section id="loginCard" class="glass rounded-[2rem] p-6 sm:p-8">
+      <h2 class="text-xl font-black mb-4">تسجيل دخول الأدمن</h2>
+      <p class="text-[12px] text-white/45 mb-6">
+        أدخل إيميل وباسوورد حساب الأدمن (Supabase Auth).
+      </p>
 
-      <div class="grid grid-cols-1 md:grid-cols-2 gap-3">
-        <input id="email" type="email" placeholder="البريد الإلكتروني"
-               class="w-full bg-white/5 border border-white/10 rounded-2xl px-4 py-3 outline-none">
-        <input id="password" type="password" placeholder="كلمة المرور"
-               class="w-full bg-white/5 border border-white/10 rounded-2xl px-4 py-3 outline-none">
-      </div>
+      <form id="loginForm" class="space-y-4">
+        <input id="email" type="email" required
+          class="w-full bg-white/5 border border-white/10 rounded-xl px-4 py-3 text-sm outline-none focus:border-indigo-500"
+          placeholder="Email" />
 
-      <div class="mt-4 flex gap-3">
-        <button id="loginBtn" class="px-5 py-3 rounded-2xl bg-indigo-600 font-black">دخول</button>
-        <button id="logoutBtn" class="px-5 py-3 rounded-2xl bg-white/10 font-black hidden">تسجيل خروج</button>
-      </div>
+        <input id="password" type="password" required
+          class="w-full bg-white/5 border border-white/10 rounded-xl px-4 py-3 text-sm outline-none focus:border-indigo-500"
+          placeholder="Password" />
 
-      <p id="loginMsg" class="mt-3 text-sm text-white/60"></p>
-    </div>
+        <button id="loginBtn" type="submit" class="btn-brand w-full py-3 rounded-xl font-black text-sm">
+          دخول
+        </button>
+
+        <p id="loginMsg" class="text-[12px] text-red-300/80 mt-2 hidden"></p>
+      </form>
+    </section>
 
     <!-- Admin Panel -->
-    <div id="adminPanel" class="hidden mt-6">
-      <div class="glass rounded-3xl p-6 mb-4 flex items-center justify-between gap-3">
-        <div>
-          <h2 class="text-lg font-black">الملفات المعلقة (Pending)</h2>
-          <p class="text-xs text-white/50 mt-1">اعتماد أو رفض أو حذف</p>
+    <section id="adminPanel" class="hidden">
+      <!-- Filters -->
+      <div class="glass rounded-[2rem] p-5 sm:p-6 mt-6 flex flex-col sm:flex-row gap-3 sm:items-center sm:justify-between">
+        <div class="flex gap-2">
+          <button data-filter="pending" class="filterBtn btn-ghost px-4 py-2 rounded-xl text-sm font-bold">Pending</button>
+          <button data-filter="approved" class="filterBtn btn-ghost px-4 py-2 rounded-xl text-sm font-bold">Approved</button>
+          <button data-filter="all" class="filterBtn btn-ghost px-4 py-2 rounded-xl text-sm font-bold">الكل</button>
         </div>
-        <button id="refreshBtn" class="px-4 py-2 rounded-2xl bg-white/10 font-black">تحديث</button>
-      </div>
 
-      <div id="pendingList" class="space-y-3"></div>
-
-      <div class="glass rounded-3xl p-6 mt-6 mb-4 flex items-center justify-between gap-3">
-        <div>
-          <h2 class="text-lg font-black">آخر الملفات المعتمدة (Approved)</h2>
-          <p class="text-xs text-white/50 mt-1">عرض سريع</p>
+        <div class="flex gap-2 w-full sm:w-auto">
+          <input id="searchBox" type="text"
+            class="w-full sm:w-72 bg-white/5 border border-white/10 rounded-xl px-4 py-2 text-sm outline-none focus:border-indigo-500"
+            placeholder="بحث بالعنوان..." />
         </div>
       </div>
 
-      <div id="approvedList" class="space-y-3"></div>
-    </div>
+      <!-- List -->
+      <div class="glass rounded-[2rem] p-5 sm:p-6 mt-4">
+        <div class="flex items-center justify-between mb-4">
+          <h3 class="text-lg font-black">الملفات</h3>
+          <span id="countBadge" class="text-[11px] bg-indigo-500/10 text-indigo-300 px-3 py-1 rounded-full border border-indigo-500/20 font-bold">0</span>
+        </div>
 
-  </div>
+        <div id="listBox" class="space-y-3"></div>
+        <div id="emptyBox" class="text-center text-[12px] text-white/35 py-10 hidden">لا توجد بيانات</div>
+      </div>
+    </section>
+
+  </main>
 
   <script src="assets/js/admin.js"></script>
 </body>
