--- a/admin.html
+++ b/admin.html
@@ -3,88 +3,92 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>لوحة الإدارة | بوابة اللجنة العلمية</title>
+  <title>لوحة الأدمن</title>
 
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700;900&display=swap" rel="stylesheet">
-
-  <link rel="stylesheet" href="assets/css/main.css">
+  <style>
+    :root{ --stroke: rgba(255,255,255,.10); }
+    body{
+      font-family: Cairo, system-ui;
+      background: linear-gradient(180deg,#060714,#0B1026);
+      color:#fff; min-height:100vh;
+    }
+    .glass{ background: rgba(15,23,42,.72); backdrop-filter: blur(10px); border: 1px solid var(--stroke); }
+    .btn-brand{
+      background: linear-gradient(135deg,#4F46E5 0%,#06B6D4 100%);
+      transition: transform .18s ease, filter .18s ease;
+    }
+    .btn-brand:hover{ transform: translateY(-1px); filter: brightness(1.03); }
+    .btn-ghost{ border: 1px solid var(--stroke); background: rgba(255,255,255,0.02); }
+    .btn-ghost:hover{ background: rgba(255,255,255,0.06); }
+  </style>
 </head>
 
-<body class="min-h-screen">
-  <main class="max-w-5xl mx-auto px-4 sm:px-6 py-10">
+<body class="p-4 sm:p-8">
 
-    <!-- Header -->
-    <div class="glass rounded-[2rem] p-6 sm:p-8 mb-6 flex items-center justify-between">
-      <div class="text-right">
-        <h1 class="text-2xl font-black">لوحة الإدارة</h1>
-        <p class="text-xs text-white/50 mt-1">إدارة الملفات المرفوعة (Pending/Approved)</p>
-      </div>
-      <div class="flex gap-2">
-        <button id="refreshBtn" class="btn-ghost px-4 py-2 rounded-xl text-sm font-bold">تحديث</button>
-        <button id="logoutBtn" class="btn-ghost px-4 py-2 rounded-xl text-sm font-bold hidden">تسجيل خروج</button>
-      </div>
-    </div>
+  <div class="max-w-4xl mx-auto">
 
     <!-- Login Card -->
-    <section id="loginCard" class="glass rounded-[2rem] p-6 sm:p-8">
-      <h2 class="text-xl font-black mb-4">تسجيل دخول الأدمن</h2>
-      <p class="text-[12px] text-white/45 mb-6">
-        أدخل إيميل وباسوورد حساب الأدمن (Supabase Auth).
-      </p>
+    <div id="loginCard" class="glass rounded-3xl p-6 sm:p-8">
+      <div class="flex items-center justify-between gap-4 mb-6">
+        <div class="text-right">
+          <h1 class="text-2xl font-black">لوحة الأدمن</h1>
+          <p class="text-sm text-white/50">سجّل دخولك</p>
+        </div>
+        <button id="refreshBtn" class="btn-ghost px-4 py-2 rounded-xl text-xs font-black">تحديث</button>
+      </div>
 
-      <form id="loginForm" class="space-y-4">
+      <form id="loginForm" class="space-y-3">
         <input id="email" type="email" required
-          class="w-full bg-white/5 border border-white/10 rounded-xl px-4 py-3 text-sm outline-none focus:border-indigo-500"
+          class="w-full bg-white/5 border border-white/10 rounded-xl px-4 py-3 text-sm outline-none"
           placeholder="Email" />
-
         <input id="password" type="password" required
-          class="w-full bg-white/5 border border-white/10 rounded-xl px-4 py-3 text-sm outline-none focus:border-indigo-500"
+          class="w-full bg-white/5 border border-white/10 rounded-xl px-4 py-3 text-sm outline-none"
           placeholder="Password" />
-
         <button id="loginBtn" type="submit" class="btn-brand w-full py-3 rounded-xl font-black text-sm">
           دخول
         </button>
-
-        <p id="loginMsg" class="text-[12px] text-red-300/80 mt-2 hidden"></p>
       </form>
-    </section>
+
+      <div id="loginMsg" class="hidden mt-4 text-sm text-amber-200/90"></div>
+      <div id="debugBox" class="mt-4 text-[12px] text-white/35"></div>
+    </div>
 
     <!-- Admin Panel -->
-    <section id="adminPanel" class="hidden">
-      <!-- Filters -->
-      <div class="glass rounded-[2rem] p-5 sm:p-6 mt-6 flex flex-col sm:flex-row gap-3 sm:items-center sm:justify-between">
-        <div class="flex gap-2">
-          <button data-filter="pending" class="filterBtn btn-ghost px-4 py-2 rounded-xl text-sm font-bold">Pending</button>
-          <button data-filter="approved" class="filterBtn btn-ghost px-4 py-2 rounded-xl text-sm font-bold">Approved</button>
-          <button data-filter="all" class="filterBtn btn-ghost px-4 py-2 rounded-xl text-sm font-bold">الكل</button>
+    <div id="adminPanel" class="hidden glass rounded-3xl p-6 sm:p-8 mt-6">
+      <div class="flex items-center justify-between gap-4 mb-4">
+        <div class="text-right">
+          <h2 class="text-xl font-black">إدارة الملفات</h2>
+          <p id="whoami" class="text-[12px] text-white/45"></p>
         </div>
 
-        <div class="flex gap-2 w-full sm:w-auto">
-          <input id="searchBox" type="text"
-            class="w-full sm:w-72 bg-white/5 border border-white/10 rounded-xl px-4 py-2 text-sm outline-none focus:border-indigo-500"
-            placeholder="بحث بالعنوان..." />
+        <div class="flex items-center gap-2">
+          <button id="logoutBtn" class="btn-ghost px-4 py-2 rounded-xl text-xs font-black">تسجيل خروج</button>
+          <button id="refreshBtn2" class="btn-ghost px-4 py-2 rounded-xl text-xs font-black">تحديث</button>
         </div>
       </div>
 
-      <!-- List -->
-      <div class="glass rounded-[2rem] p-5 sm:p-6 mt-4">
-        <div class="flex items-center justify-between mb-4">
-          <h3 class="text-lg font-black">الملفات</h3>
-          <span id="countBadge" class="text-[11px] bg-indigo-500/10 text-indigo-300 px-3 py-1 rounded-full border border-indigo-500/20 font-bold">0</span>
+      <div class="flex flex-col sm:flex-row gap-3 sm:items-center sm:justify-between mb-4">
+        <div class="flex gap-2 flex-wrap">
+          <button class="filterBtn btn-ghost px-4 py-2 rounded-xl text-xs font-black" data-filter="pending">Pending</button>
+          <button class="filterBtn btn-ghost px-4 py-2 rounded-xl text-xs font-black" data-filter="approved">Approved</button>
+          <button class="filterBtn btn-ghost px-4 py-2 rounded-xl text-xs font-black" data-filter="all">All</button>
+          <span class="text-[12px] text-white/45 self-center">العدد: <b id="countBadge">0</b></span>
         </div>
 
-        <div id="listBox" class="space-y-3"></div>
-        <div id="emptyBox" class="text-center text-[12px] text-white/35 py-10 hidden">لا توجد بيانات</div>
+        <input id="searchBox" class="w-full sm:w-64 bg-white/5 border border-white/10 rounded-xl px-4 py-2 text-sm outline-none"
+          placeholder="بحث باسم المادة..." />
       </div>
-    </section>
 
-  </main>
+      <div id="emptyBox" class="hidden text-center text-sm text-white/40 py-10">لا توجد عناصر</div>
+      <div id="listBox" class="space-y-3"></div>
+    </div>
 
-  <script src="assets/js/admin.js"></script>
+  </div>
+
+  <!-- مهم: لازم يكون RELATIVE مو /assets -->
+  <script src="assets/js/admin.js?v=200"></script>
 </body>
 </html>
